compiler/testData/diagnostics/tests/incompleteCode/diagnosticWithSyntaxError/incompleteVal.kt
// RUN_PIPELINE_TILL: SOURCE
// FIR_IDENTICAL
package c

val i =<!SYNTAX!><!>
